# adaptive-cover

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.fr.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: FUNDING.yaml  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: hacs.yaml  hassfest.yml  release-drafter.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/adaptive_cover/: CHANGELOG.md  README.fr.md  README.md  RUNBOOK.fr.md  __init__.py  binary_sensor.py  blueprint.py  button.py  calculation.py  config_context_adapter.py  config_flow.py  const.py  coordinator.py  cover.py  diagnostics.py  helpers.py  icons.json  manifest.json  number.py  scene.py  select.py  sensor.py  sensor_oud.py  strings.json  sun.py  switch.py  test_env.ipynb  time.py
custom_components/adaptive_cover/blueprints/: adaptive_cover.yaml  auto_sun_blind.yaml
custom_components/adaptive_cover/hub/: __init__.py  config_flow.py  cover.py  scene.py  select.py  switch.py
custom_components/adaptive_cover/pipeline/: __init__.py  registry.py  types.py
custom_components/adaptive_cover/pipeline/handlers/: __init__.py  security.py
custom_components/adaptive_cover/translations/: de.json  en.json  es.json  fr.json  nl.json  pl.json  sk.json
notebooks/: test_env.ipynb
scripts/: setup
tests/hub/: __init__.py  test_hub_cover.py  test_security_handler.py
